--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -56,7 +56,7 @@ $border: #D5D5D5;
 			}
 	}
 	.date {
-		font-size: .93em;
+		font-size: 1em;
 		margin-bottom: 2em;
 		color: $light;
     display: inline-block;
