Make navbar static

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <%= yield :head %>
 </head>
 <body>
-  <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav clearfix" role="banner">
+  <header class="navbar navbar-inverse navbar-static-top bs-docs-nav clearfix" role="banner">
       <div class="navbar-header">
         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
