Fix disappearing commas in tag list on edit

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -19,7 +19,7 @@
   <br>
 
   <%= f.label :tags %><br>
-  <%= f.text_field :tag_list, placeholder: "Tags separated with comma"  %>
+  <%= f.text_field :tag_list, value: @post.tag_list.to_s, placeholder: "Tags separated with comma"  %>
 
   <br>
 
