Remove word-wrap on <pre> and <code>

--- a/app/assets/stylesheets/pygments.css.scss
+++ b/app/assets/stylesheets/pygments.css.scss
@@ -19,7 +19,10 @@ pre{
 	 -webkit-border-radius: 5px;
 	 -moz-border-radius: 5px;
 	 border-radius: 5px;
-	overflow: auto;
+	overflow-x: auto;
+  letter-spacing: -0.3px;
+  word-wrap: normal;
+  word-break: normal;
 }
 
 code{
@@ -29,7 +32,10 @@ code{
 	 -webkit-border-radius: 2px;
 	 -moz-border-radius: 2px;
 	 border-radius: 2px;
-   overflow: auto;
+   overflow-x: auto;
+   letter-spacing: -0.3px;
+   word-wrap: normal;
+   word-break: normal;
 }
 
 .highlight .lineno { color: #586e75 } /* Line Numbers */
