Add new avatar image

--- a/app/views/posts/_sidebar.html.erb
+++ b/app/views/posts/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <div class="col-sm-3 col-md-3 sidebar pull-right">
-  <%= image_tag "avatar.jpg", class: "avatar" %>
+  <%= image_tag "https://pbs.twimg.com/profile_images/662661799741820929/-3oHkr7l.jpg", class: "avatar" %>
   <p class="about_me">My name is Dan Rempel and I'm a web developer living in Edmonton, Alberta. I'm a ruby enthusiast and analytics junkie. My hope is to use this blog to solidify things as I learn them while also hopefully giving back to the community.</p>
   <div id="tag_cloud">
     <h6>Tags</h6>
